--- a/Pocetna.css
+++ b/Pocetna.css
@@ -1,25 +1,90 @@
-p {font-family : Verdana; color: rgb(255, 255, 255); margin-left: 270px;margin-right: 480px; font-size: 25px; text-align: left;}
-h2 {font-family : Arial, Helvetica, sans-serif; color: rgb(255, 255, 255); margin-left: 270px; font-size: 40px;text-align: left;}
-h1{font-family: Verdana; color: white; font-size: 180px; margin-left: 150px; margin-right: auto;}
+p {
+    font-family: Verdana;
+    color: rgb(255, 255, 255);
+    margin-left: 270px;
+    margin-right: 480px;
+    font-size: 25px;
+    text-align: left;
+}
 
- /* unvisited link */
- a:link {
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(255, 255, 255);
+    margin-left: 270px;
+    font-size: 40px;
+    text-align: left;
+}
+
+h1 {
+    font-family: Verdana;
     color: white;
-    position: fixed;
-    font-size: large;
-  }
-  
-  /* visited link */
-  a:visited {
-    color: lightgoldenrodyellow;
-  }
-  
-  /* mouse over link */
-  a:hover {
+    font-size: 180px;
+    margin-left: 150px;
+    margin-right: auto;
+}
+
+
+/* unvisited link */
+
+
+/* visited link */
+
+a:visited {
+    color: goldenrod;
+}
+
+
+/* mouse over link */
+
+a:hover {
     color: hotpink;
-  }
-  
-  /* selected link */
-  a:active {
-    color: blue;
-  } 
+}
+
+
+/* selected link */
+
+a:active {
+    color: white;
+}
+
+#navigacija {
+    font-size: 26px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    margin-top: 0px;
+    padding-top: 0px;
+    top: -440px;
+    left: 944px;
+}
+
+a.na {
+    color: black;
+    position: relative;
+    font-size: x-large;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+header {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    position: relative;
+}
+
+a.na:hover {
+    color: hotpink;
+}
+
+#str {
+    color: black;
+}
+
+#str:hover {
+    color: hotpink;
+}
+
+nav {
+    width: 100%;
+}
