--- a/Zanimljivosti.css
+++ b/Zanimljivosti.css
@@ -38,3 +38,39 @@ a.na:hover {
 nav {
     width: 100%;
 }
+
+h1 {
+    text-align: center;
+    font-size: 40px;
+}
+
+img {
+    float: right;
+    padding-left: 20px;
+}
+
+.slike {
+    width: 800px;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 15px;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.pas {
+    float: left;
+    font-size: x-large;
+}
+
+ul {
+    width: 800px;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 15px;
+    text-align: justify;
+    text-justify: inter-word;
+    font-size: x-large;
+}
