--- a/Rase.css
+++ b/Rase.css
@@ -10,6 +10,10 @@ img {
     padding-left: 20px;
 }
 
+body {
+    background-color: rgb(255, 246, 241);
+}
+
 .tekst-kera {
     width: 800px;
     max-width: 100%;
