--- a/Pocetna.css
+++ b/Pocetna.css
@@ -23,6 +23,23 @@ h1 {
     margin-right: auto;
 }
 
+.goreLevo {
+    position: absolute;
+    top: -27px;
+    left: 17px;
+    font-size: 28px;
+    color: white;
+}
+
+h6 {
+    position: absolute;
+    top: 6px;
+    left: 35px;
+    font-size: 16px;
+    font-style: italic;
+    color: white;
+}
+
 
 /* visited link */
 
