--- a/Rase.css
+++ b/Rase.css
@@ -14,6 +14,21 @@ body {
     background-color: rgb(255, 246, 241);
 }
 
+.goreLevo {
+    position: absolute;
+    top: -27px;
+    left: 17px;
+    font-size: 28px;
+}
+
+h6 {
+    position: absolute;
+    top: 6px;
+    left: 35px;
+    font-size: 16px;
+    font-style: italic;
+}
+
 .tekst-kera {
     width: 800px;
     max-width: 100%;
