--- a/Zanimljivosti.css
+++ b/Zanimljivosti.css
@@ -23,6 +23,21 @@ a.na {
     padding-right: 10px;
 }
 
+.goreLevo {
+    position: absolute;
+    top: -27px;
+    left: 17px;
+    font-size: 28px;
+}
+
+h6 {
+    position: absolute;
+    top: 6px;
+    left: 35px;
+    font-size: 16px;
+    font-style: italic;
+}
+
 body {
     background-color: rgb(255, 246, 241);
 }
