--- a/Pocetna.css
+++ b/Pocetna.css
@@ -4,7 +4,7 @@ p {
     margin-left: 270px;
     margin-right: 480px;
     font-size: 25px;
-    text-align: left;
+    text-align: justify;
 }
 
 h2 {
